--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,31 @@
 <resources>
     <string name="app_name">PizzariaTopzera</string>
+    <string name="txt_login">login</string>
+    <string name="hint_login">informe o login</string>
+    <string name="txt_senha">senha</string>
+    <string name="hint_senha">informe sua senha</string>
+    <string name="botao_login">conectar</string>
+
+    <string name="txt_saudacao">eaí</string>
+    <string name="txt_escolha_pizza">Escolha a(s) pizza(s)</string>
+    <string name="txt_pizza_atum">Atum</string>
+    <string name="txt_pizza_bacon">Bacon</string>
+    <string name="txt_pizza_calabresa">Calabresa</string>
+    <string name="txt_pizza_mussarela">Mussarela</string>
+    <string name="txt_tamanho_pizza">Tamanho da Pizza</string>
+
+    <string name="txt_pizza_pequena">Pequena</string>
+    <string name="txt_pizza_media">Média</string>
+    <string name="txt_pizza_grande">Grande</string>
+    <string name="txt_forma_pagamento">Forma de pagamento</string>
+    <string name="txt_extras">Extras</string>
+    <string name="txt_borda_recheada">Borda recheada</string>
+    <string name="txt_recheio_extra">Recheio extra</string>
+    <string name="txt_refrigerante">Refrigerante</string>
+    <string name="txt_sobremesa">Sobremesa</string>
+    <string name="txt_calcular">Calcular</string>
+    <string name="txt_cheque">Cheque</string>
+    <string name="txt_cartao">Cartao</string>
+    <string name="txt_vr">VR</string>
+    <string name="txt_dinheiro">Dinheiro</string>
 </resources>
